--- a/README
+++ b/README
@@ -10,9 +10,9 @@ Enzo's main webpage is:
 
  * http://enzo-project.org
 
-Enzo is developed in the open on bitbucket.org:
+Enzo is developed in the open on github.com:
 
- * https://bitbucket.org/enzo/enzo-dev
+ * https://github.com/enzo-project/
 
 Documentation, including instructions for compilation, can be found at:
 
