I changed Mercurial/mercurial and bitbucket to Git/GitHub where appropriate

--- a/README
+++ b/README
@@ -10,9 +10,9 @@ Enzo's main webpage is:
 
  * http://enzo-project.org
 
-Enzo is developed in the open on bitbucket.org:
+Enzo is developed in the open on github.com:
 
- * https://bitbucket.org/enzo/enzo-dev
+ * https://github.com/enzo/enzo-dev
 
 Documentation, including instructions for compilation, can be found at:
 
@@ -32,7 +32,7 @@ You can also follow the Enzo Project on google+ at:
  * https://plus.google.com/115923030596894217717
 
 If you have received this source code through an archive, rather than the
-mercurial version control system, we highly encourage you to upgrade to the
+GitHub version control system, we highly encourage you to upgrade to the
 version controlled source, as no support can be provided for archived
 ("tarball") sources.
 
