--- a/README
+++ b/README
@@ -45,6 +45,7 @@ list of the people who have recently contributed, in alphabetical order:
    * Gabriel Altay          gabriel.altay@gmail.com
    * James Bordner          jobordner@ucsd.edu
    * Greg Bryan             gbryan@astro.columbia.edu
+   * Iryna Butsky           ibutsky@uw.edu
    * Renyue Cen             cen@astro.princeton.edu
    * Dave Collins           dcollins4096@gmail.com
    * Brian Crosby           crosby.bd@gmail.com
