--- a/README
+++ b/README
@@ -27,12 +27,8 @@ the Enzo Developer's mailing list as well:
 
  * https://groups.google.com/forum/#!forum/enzo-dev
 
-You can also follow the Enzo Project on google+ at:
-
- * https://plus.google.com/115923030596894217717
-
 If you have received this source code through an archive, rather than the
-mercurial version control system, we highly encourage you to upgrade to the
+git version control system, we highly encourage you to upgrade to the
 version controlled source, as no support can be provided for archived
 ("tarball") sources.
 
