Changing tabs to spaces in README

--- a/README
+++ b/README
@@ -49,7 +49,7 @@ list of the people who have recently contributed, in alphabetical order:
    * Lauren Corlies         lcorlies@lsst.org
    * Brian Crosby           crosby.bd@gmail.com
    * Philipp Edelmann	    pedelmann@mpa-garching.mpg.de
-   * Andrew Emerick	        aemerick11@gmail.com
+   * Andrew Emerick         aemerick11@gmail.com
    * Forrest Glines         forrestglines@gmail.com
    * Nathan Goldbaum        ngoldbau@ucsc.edu
    * Philipp Grete          grete@pa.msu.edu 
@@ -62,13 +62,13 @@ list of the people who have recently contributed, in alphabetical order:
    * Peter Iannucci         iannucii@mit.edu
    * Ji-hoon Kim            mornkr@tapir.caltech.edu
    * Daegene Koh            dkoh30@gatech.edu
-   * Shuo Kong		        skong.astro@gmail.com
+   * Shuo Kong              skong.astro@gmail.com
    * Claire Kopenhafer      clairekope@gmail.com
    * Alexei Kritsuk         akritsuk@ucsd.edu
    * Michael Kuhlen         kuhlen@gmail.com
    * James Larrue           james.larrue@diopolis.com
    * Eve Lee                elee@cita.utoronto.ca
-   * Miao Li		        ml3322@columbia
+   * Miao Li                ml3322@columbia.edu
    * Yuan Li                yuan@astro.columbia.edu
    * Greg Meece             meecegre@msu.edu
    * Yuu Niino              yuuniino@ioa.s.u-tokyo.ac.jp
